--- a/app/src/main/assets/arouter.html
+++ b/app/src/main/assets/arouter.html
@@ -20,7 +20,7 @@
     </a>
 </p>
 <p>
-    <a href="arouter://m.aliyun.com/test/activity1?name=alex&age=18&boy=true&high=180&obj=%7b%22name%22%3a%22jack%22%2c%22id%22%3a666%7d">
+    <a href="arouter://m.aliyun.com/app/test1?name=alex&age=18&boy=true&high=180&obj=%7b%22name%22%3a%22jack%22%2c%22id%22%3a666%7d">
         arouter://m.aliyun.com/test/activity1?name=alex&age=18&boy=true&high=180&
         obj={"name":"jack","id":"666"}
     </a>
